--- a/public/en/404.html
+++ b/public/en/404.html
@@ -3,7 +3,7 @@
   <head>
     
       <title>
-        The Malware Ninja Blog
+        Threat Anatomy Blog
       </title>
     
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -51,7 +51,7 @@
 <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="/en/404.html" /><meta property="og:site_name" content="The Malware Ninja Blog" />
+<meta property="og:url" content="/en/404.html" /><meta property="og:site_name" content="Threat Anatomy Blog" />
 
 
 
@@ -74,7 +74,7 @@
 </svg>
 </span>
     <span class="logo__text"
-      >The Malware Ninja</span
+      >Threat Anatomy Blog</span
     >
     <span class="logo__cursor"></span>
   
@@ -169,7 +169,7 @@
 </svg>
 </span>
     <span class="logo__text"
-      >The Malware Ninja</span
+      >Threat Anatomy Blog</span
     >
     <span class="logo__cursor"></span>
   
