--- a/public/es/contact/index.html
+++ b/public/es/contact/index.html
@@ -20,6 +20,7 @@ Puedes enviarme un correo a contact@threatanatomy.io.
 />
 <meta name="robots" content="noodp" />
 <link rel="canonical" href="/es/contact/" />
+<link rel="me" href="https://infosec.exchange/@stapia"/>
 
 
 
