--- a/public/en/contact/index.html
+++ b/public/en/contact/index.html
@@ -20,6 +20,7 @@ Thank you!"
 />
 <meta name="robots" content="noodp" />
 <link rel="canonical" href="/en/contact/" />
+<link rel="me" href="https://infosec.exchange/@stapia"/>
 
 
 
