--- a/public/es/404.html
+++ b/public/es/404.html
@@ -18,6 +18,7 @@
 />
 <meta name="robots" content="noodp" />
 <link rel="canonical" href="/es/404.html" />
+<link rel="me" href="https://infosec.exchange/@stapia"/>
 
 
 
