--- a/public/es/index.html
+++ b/public/es/index.html
@@ -19,6 +19,7 @@
 />
 <meta name="robots" content="noodp" />
 <link rel="canonical" href="/es/" />
+<link rel="me" href="https://infosec.exchange/@stapia"/>
 
 
 
