--- a/public/en/index.html
+++ b/public/en/index.html
@@ -22,6 +22,10 @@
 <link rel="me" href="https://infosec.exchange/@stapia"/>
 
 
+<link rel="alternate" hreflang="es" href="https://threatanatomy.io/es/" />
+<link rel="alternate" hreflang="en" href="https://threatanatomy.io/en/" />
+
+
 
 
 
