--- a/public/es/contact/index.html
+++ b/public/es/contact/index.html
@@ -23,6 +23,10 @@ Puedes enviarme un correo a contact@threatanatomy.io.
 <link rel="me" href="https://infosec.exchange/@stapia"/>
 
 
+<link rel="alternate" hreflang="en" href="https://threatanatomy.io/en/contact/" />
+<link rel="alternate" hreflang="es" href="https://threatanatomy.io/es/contact/" />
+
+
 
 
 
