--- a/public/en/contact/index.html
+++ b/public/en/contact/index.html
@@ -23,6 +23,10 @@ Thank you!"
 <link rel="me" href="https://infosec.exchange/@stapia"/>
 
 
+<link rel="alternate" hreflang="es" href="https://threatanatomy.io/es/contact/" />
+<link rel="alternate" hreflang="en" href="https://threatanatomy.io/en/contact/" />
+
+
 
 
 
