correcion titulo ingles

--- a/public/en/contact/index.html
+++ b/public/en/contact/index.html
@@ -49,23 +49,21 @@ Thank you!"
 <link href="/fonts/Inter-BoldItalic.woff2" rel="preload" type="font/woff2" as="font" crossorigin="">
 
 
-<meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="Contact me"/>
+<meta name="twitter:card" content="summary"><meta name="twitter:title" content="Contact me">
 <meta name="twitter:description" content="Did you find anything wrong with my analysis? Did I missed something? Do you just want to say hi?
 You can send me an email to contact@threatanatomy.io.
-Thank you!"/>
+Thank you!">
 
 
 
-<meta property="og:title" content="Contact me" />
-<meta property="og:description" content="Did you find anything wrong with my analysis? Did I missed something? Do you just want to say hi?
+<meta property="og:url" content="/en/contact/">
+  <meta property="og:site_name" content="Threat Anatomy Blog">
+  <meta property="og:title" content="Contact me">
+  <meta property="og:description" content="Did you find anything wrong with my analysis? Did I missed something? Do you just want to say hi?
 You can send me an email to contact@threatanatomy.io.
-Thank you!" />
-<meta property="og:type" content="article" />
-<meta property="og:url" content="/en/contact/" /><meta property="article:section" content="" />
-
-<meta property="og:site_name" content="Threat Anatomy Blog" />
-
+Thank you!">
+  <meta property="og:locale" content="en">
+  <meta property="og:type" content="article">
 
 
 
