--- a/public/es/contact/index.html
+++ b/public/es/contact/index.html
@@ -49,23 +49,21 @@ Puedes enviarme un correo a contact@threatanatomy.io.
 <link href="/fonts/Inter-BoldItalic.woff2" rel="preload" type="font/woff2" as="font" crossorigin="">
 
 
-<meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="Contáctame"/>
+<meta name="twitter:card" content="summary"><meta name="twitter:title" content="Contáctame">
 <meta name="twitter:description" content="¿Encontraste algún error en mi análisis? ¿Tal vez omití algo? ¿Solo deseas decir &lsquo;Hola!&rsquo;?
 Puedes enviarme un correo a contact@threatanatomy.io.
-¡Gracias!"/>
+¡Gracias!">
 
 
 
-<meta property="og:title" content="Contáctame" />
-<meta property="og:description" content="¿Encontraste algún error en mi análisis? ¿Tal vez omití algo? ¿Solo deseas decir &lsquo;Hola!&rsquo;?
+<meta property="og:url" content="/es/contact/">
+  <meta property="og:site_name" content="Threat Anatomy Blog">
+  <meta property="og:title" content="Contáctame">
+  <meta property="og:description" content="¿Encontraste algún error en mi análisis? ¿Tal vez omití algo? ¿Solo deseas decir ‘Hola!’?
 Puedes enviarme un correo a contact@threatanatomy.io.
-¡Gracias!" />
-<meta property="og:type" content="article" />
-<meta property="og:url" content="/es/contact/" /><meta property="article:section" content="" />
-
-<meta property="og:site_name" content="Threat Anatomy Blog" />
-
+¡Gracias!">
+  <meta property="og:locale" content="es">
+  <meta property="og:type" content="article">
 
 
 
